<resources>
    <string name="app_name">Border Risk</string>
    <string name="single_player">play with others on this device</string>

    <string name="game_title">Border Risk</string>
    <string name="game_blurb">To play online, you must sign in with Google. \n\n If you connect you can play with your friends, or random people across the world!</string>
    <string name="single_player_explanation">Play offline with friends.</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge random opponent/opponents.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="please_wait_text">Please wait for you turn</string>
    <string name="doneButtonText">Done</string>
    <string name="placeButtonText">Place</string>
    <string name="fightButtonText">FIGHT</string>
    <string name="cardsButtonText">Cards</string>
    <string name="nextTurnButtonText">Next Turn</string>
    <string name="showListButtonText">Show List</string>
    <string name="hideListButtonText">Hide List</string>
    <string name="playerWonText">Player won!</string>
    <string name="card_image">Card image</string>
    <string name="back">Back</string>
    <string name="get_armies">Get armies</string>
    <string name="game_started">Game started</string>
    <string name="_0_0">0/0</string>
    <string name="game_phase">Game Phase</string>
    <string name="player_name">Player Name</string>
    <string name="armies_to_place">Armies to place:</string>
    <string name="player_image">player Image</string>
    <string name="waiting_for_player">Waiting for player</string>
    <string name="chatButtonText">Chat</string>
    <string name="chatHint">Message</string>

</resources>
