<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="#bdbdbd">

    <ImageView
        android:layout_width="56dp"
        android:layout_height="fill_parent"
        android:id="@+id/playerImage"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/player_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_name"
        android:id="@+id/playerName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/playerImage"
        android:layout_toEndOf="@+id/playerImage"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/armies_to_place"
        android:id="@+id/armiesToPlace"
        android:layout_below="@+id/playerName"
        android:layout_alignLeft="@+id/playerName"
        android:layout_alignStart="@+id/playerName"
        android:layout_marginTop="3dp"
        android:textSize="14dp" />

    <TextView
        android:layout_width="10dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/colourHax"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="true"
        android:background="#8e8e8e"
        android:layout_margin="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp" />

</RelativeLayout>
